fixed main text alignment

--- a/src/app/mainpage/mainpage.component.css
+++ b/src/app/mainpage/mainpage.component.css
@@ -42,15 +42,6 @@ body {
     align-content: center;
 }
 
-#mainTxt{
-    margin-top: 2vmin;
-    display: inline-block;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: justify;
-}
-
 .col-sm {
     text-align: center;
 }
